--- a/_portfolio/林俊杰-你是我的唯一.md
+++ b/_portfolio/林俊杰-你是我的唯一.md
@@ -7,7 +7,7 @@ date: "6 may 2018"
 tags: [林俊杰, 你是我的唯一, JJ Lin, You are my one and only one]
 ---
 
-### Simplified
+### [Simplified](#simplified) | [Traditional](#traditional)
 
 ```
 很想给你写封信
@@ -75,18 +75,6 @@ You are my one and only one ~
 You are the only one ooo ~
 ```
 
-| Karakters | Pinyin | Betekenis |
-| --- | --- | --- |
-| 很 | hen3 | (adverb of degree)/quite/very/awfully |
-| 想 | xiang3 | to think/to believe/to suppose/to wish/to want/to miss (feel wistful about the absence of sb or sth) |
-| 你 | ni3 | you (informal, as opposed to courteous 您[nin2]) |
-| 封 | Feng1 | surname Feng |
-| 封 | feng1 | to confer/to grant/to bestow a title/to seal/classifier for sealed objects, esp. letters |
-| 信 | xin4 | letter/mail/CL:封[feng1]/to trust/to believe/to profess faith in/truthful/confidence/trust/at will/at random |
-
-
-
-### Traditioneel
 
 ```
 很想給你寫封信
@@ -154,15 +142,155 @@ You are my one and only one ~
 You are the only one ooo ~
 ```
 
-| Karakters | Pinyin | Betekenis |
-| --- | --- | --- |
-| 很 | hen3 | (adverb of degree)/quite/very/awfully |
-| 想 | xiang3 | to think/to believe/to suppose/to wish/to want/to miss (feel wistful about the absence of sb or sth) |
-| 給 | gei3 | to/for/for the benefit of/to give/to allow/to do sth (for sb)/(grammatical equivalent of 被)/(grammatical equivalent of 把)/(sentence intensifier) |
-| 給 | ji3 | to supply/to provide |
-| 你 | ni3 | you (informal, as opposed to courteous 您[nin2]) |
-| 寫 | xie3 | to write |
-| 封 | Feng1 | surname Feng |
-| 封 | feng1 | to confer/to grant/to bestow a title/to seal/classifier for sealed objects, esp. letters |
-| 信 | xin4 | letter/mail/CL:封[feng1]/to trust/to believe/to profess faith in/truthful/confidence/trust/at will/at random |
+| Traditioneel | Simplified | Pinyin | Betekenis |
+| --- | --- | --- | --- |
+| 很 | 很 | hen3 | (adverb of degree)/quite/very/awfully |
+| 想 | 想 | xiang3 | to think/to believe/to suppose/to wish/to want/to miss (feel wistful about the absence of sb or sth) |
+| 給 | 给 | gei3 | to/for/for the benefit of/to give/to allow/to do sth (for sb)/(grammatical equivalent of 被)/(grammatical equivalent of 把)/(sentence intensifier) |
+| 給 | 给 | ji3 | to supply/to provide |
+| 你 | 你 | ni3 | you (informal, as opposed to courteous 您[nin2]) |
+| 寫 | 写 | xie3 | to write |
+| 封 | 封 | Feng1 | surname Feng |
+| 封 | 封 | feng1 | to confer/to grant/to bestow a title/to seal/classifier for sealed objects, esp. letters |
+| 信 | 信 | xin4 | letter/mail/CL:封[feng1]/to trust/to believe/to profess faith in/truthful/confidence/trust/at will/at random |
+| 告 | 告 | gao4 | to say/to tell/to announce/to report/to denounce/to file a lawsuit/to sue |
+| 告訴 | 告诉 | gao4 su4 | to press charges/to file a complaint |
+| 告訴 | 告诉 | gao4 su5 | to tell/to inform/to let know |
+| 訴 | 诉 | su4 | to complain/to sue/to tell |
+| 這 | 这 | zhe4 | this/these/(commonly pr. [zhei4] before a classifier, esp. in Beijing) |
+| 這裡 | 这里 | zhe4 li3 | here |
+| 裡 | 里 | li3 | lining/interior/inside/internal/also written 裏|里[li3] |
+| 的 | 的 | de5 | of/~'s (possessive particle)/(used after an attribute)/(used to form a nominal expression)/(used at the end of a declarative sentence for emphasis) |
+| 的 | 的 | di1 | see 的士[di1 shi4] |
+| 的 | 的 | di2 | really and truly |
+| 的 | 的 | di4 | aim/clear |
+| 天 | 天 | tian1 | day/sky/heaven |
+| 天氣 | 天气 | tian1 qi4 | weather |
+| 氣 | 气 | qi4 | gas/air/smell/weather/to make angry/to annoy/to get angry/vital energy/qi |
+| 昨 | 昨 | zuo2 | yesterday |
+| 昨夜 | 昨夜 | zuo2 ye4 | last night |
+| 夜 | 夜 | ye4 | night |
+| 那 | 那 | Na1 | surname Na |
+| 那 | 那 | Nuo2 | surname Nuo |
+| 那 | 那 | na3 | variant of 哪[na3] |
+| 那 | 那 | na4 | that/those/then (in that case)/commonly pr. [nei4] before a classifier, esp. in Beijing |
+| 那 | 那 | nuo2 | (archaic) many/beautiful/how/old variant of 挪[nuo2] |
+| 一 | 一 | yi1 | one/1/single/a (article)/as soon as/entire/whole/all/throughout/"one" radical in Chinese characters (Kangxi radical 1)/also pr. [yao1] for greater clarity when spelling out numbers digit by digit |
+| 場 | 场 | chang2 | threshing floor/classifier for events and happenings: spell, episode, bout |
+| 場 | 场 | chang3 | large place used for a specific purpose/stage/scene (of a play)/classifier for sporting or recreational activities/classifier for number of exams |
+| 電 | 电 | dian4 | electric/electricity/electrical |
+| 電影 | 电影 | dian4 ying3 | movie/film/CL:部[bu4],片[pian4],幕[mu4],場|场[chang3] |
+| 影 | 影 | ying3 | picture/image/film/movie/photograph/reflection/shadow/trace |
+| 還 | 还 | Huan2 | surname Huan |
+| 還 | 还 | hai2 | still/still in progress/still more/yet/even more/in addition/fairly/passably (good)/as early as/even/also/else |
+| 還 | 还 | huan2 | to pay back/to return |
+| 還有 | 还有 | hai2 you3 | furthermore/in addition/still/also |
+| 有 | 有 | you3 | to have/there is/there are/to exist/to be |
+| 我 | 我 | wo3 | I/me/my |
+| 心 | 心 | xin1 | heart/mind/intention/center/core/CL:顆|颗[ke1],個|个[ge4] |
+| 心情 | 心情 | xin1 qing2 | mood/frame of mind/CL:個|个[ge4] |
+| 情 | 情 | qing2 | feeling/emotion/passion/situation |
+| 卻 | 却 | que4 | but/yet/however/while/to go back/to decline/to retreat/nevertheless/even though |
+| 只 | 只 | zhi3 | only/merely/just/but |
+| 只是 | 只是 | zhi3 shi4 | merely/simply/only/but |
+| 是 | 是 | shi4 | is/are/am/yes/to be |
+| 而 | 而 | er2 | and/as well as/and so/but (not)/yet (not)/(indicates causal relation)/(indicates change of state)/(indicates contrast) |
+| 而已 | 而已 | er2 yi3 | that's all/nothing more |
+| 已 | 已 | yi3 | already/to stop/then/afterwards |
+| 已經 | 已经 | yi3 jing1 | already |
+| 經 | 经 | Jing1 | surname Jing |
+| 經 | 经 | jing1 | classics/sacred book/scripture/to pass through/to undergo/to bear/to endure/warp (textile)/longitude/menstruation/channel (TCM)/abbr. for economics 經濟|经济[jing1 ji4] |
+| 不 | 不 | bu4 | (negative prefix)/not/no |
+| 不能 | 不能 | bu4 neng2 | cannot/must not/should not |
+| 能 | 能 | Neng2 | surname Neng |
+| 能 | 能 | neng2 | can/to be able to/might possibly/ability/(physics) energy |
+| 肯 | 肯 | ken3 | to agree/to consent/to be ready (to do sth)/willing |
+| 肯定 | 肯定 | ken3 ding4 | to be certain/to be positive/assuredly/definitely/to give recognition/to affirm/affirmative (answer) |
+| 定 | 定 | ding4 | to set/to fix/to determine/to decide/to order |
+| 是不是 | 是不是 | shi4 bu4 shi4 | is or isn't/yes or no/whether or not |
+| 不是 | 不是 | bu2 shi5 | fault/blame |
+| 不是 | 不是 | bu4 shi4 | no/is not/not |
+| 會 | 会 | hui4 | can/to be possible/to be able to/will/to be likely to/to be sure to/to assemble/to meet/to gather/to see/union/group/association/CL:個|个[ge4]/a moment (Taiwan pr. for this sense is [hui3]) |
+| 會 | 会 | kuai4 | to balance an account/accountancy/accounting |
+| 關 | 关 | Guan1 | surname Guan |
+| 關 | 关 | guan1 | mountain pass/to close/to shut/to turn off/to concern/to involve |
+| 關心 | 关心 | guan1 xin1 | to be concerned about/to care about |
+| 心愛 | 心爱 | xin1 ai4 | beloved |
+| 愛 | 爱 | ai4 | to love/to be fond of/to like/affection/to be inclined (to do sth)/to tend to (happen) |
+| 與 | 与 | yu2 | variant of 歟|欤[yu2] |
+| 與 | 与 | yu3 | and/to give/together with |
+| 與 | 与 | yu4 | to take part in |
+| 都 | 都 | Du1 | surname Du |
+| 都 | 都 | dou1 | all/both/entirely/(used for emphasis) even/already/(not) at all |
+| 都 | 都 | du1 | capital city/metropolis |
+| 需 | 需 | xu1 | to require/to need/to want/necessity/need |
+| 需要 | 需要 | xu1 yao4 | to need/to want/to demand/to require/requirement/need |
+| 要 | 要 | yao1 | to demand/to request/to coerce |
+| 要 | 要 | yao4 | important/vital/to want/to ask for/will/going to (as future auxiliary)/may/must/(used in a comparison) must be/probably/if |
+| 勇 | 勇 | yong3 | brave |
+| 勇氣 | 勇气 | yong3 qi4 | courage/valor |
+| 於 | 于 | yu2 | in/at/to/from/by/than/out of |
+| 於 | 於 | Yu1 | surname Yu/Taiwan pr. [Yu2] |
+| 於 | 於 | wu1 | (literary) Oh!/Ah! |
+| 於是 | 于是 | yu2 shi4 | thereupon/as a result/consequently/thus/hence |
+| 我們 | 我们 | wo3 men5 | we/us/ourselves/our |
+| 們 | 们 | men5 | plural marker for pronouns, and nouns referring to individuals |
+| 選 | 选 | xuan3 | to choose/to pick/to select/to elect |
+| 選擇 | 选择 | xuan3 ze2 | to select/to pick/choice/option/alternative |
+| 擇 | 择 | ze2 | to select/to choose/to pick over/to pick out/to differentiate/to eliminate/also pr. [zhai2] |
+| 了 | 了 | le5 | (modal particle intensifying preceding clause)/(completed action marker) |
+| 了 | 了 | liao3 | to finish/to achieve/variant of 瞭|了[liao3]/to understand clearly |
+| 放 | 放 | fang4 | to put/to place/to release/to free/to let go/to let out/to set off (fireworks) |
+| 放棄 | 放弃 | fang4 qi4 | to renounce/to abandon/to give up |
+| 棄 | 弃 | qi4 | to abandon/to relinquish/to discard/to throw away |
+| 逃 | 逃 | tao2 | to escape/to run away/to flee |
+| 逃避 | 逃避 | tao2 bi4 | to escape/to evade/to avoid/to shirk |
+| 避 | 避 | bi4 | to avoid/to shun/to flee/to escape/to keep away from/to leave/to hide from |
+| 或 | 或 | huo4 | maybe/perhaps/might/possibly/or |
+| 或許 | 或许 | huo4 xu3 | perhaps/maybe |
+| 許 | 许 | Xu3 | surname Xu |
+| 許 | 许 | xu3 | to allow/to permit/to promise/to praise/somewhat/perhaps |
+| 相 | 相 | Xiang1 | surname Xiang |
+| 相 | 相 | xiang1 | each other/one another/mutually |
+| 相 | 相 | xiang4 | appearance/portrait/picture/government minister/(physics) phase/(literary) to appraise (esp. by scrutinizing physical features)/to read sb's fortune (by physiognomy, palmistry etc) |
+| 相信 | 相信 | xiang1 xin4 | to be convinced (that sth is true)/to believe/to accept sth as true |
+| 滿 | 满 | Man3 | Manchu ethnic group |
+| 滿 | 满 | man3 | to fill/full/filled/packed/fully/completely/quite/to reach the limit/to satisfy/satisfied/contented |
+| 滿意 | 满意 | man3 yi4 | satisfied/pleased/to one's satisfaction |
+| 意 | 意 | Yi4 | Italy/Italian/abbr. for 意大利[Yi4 da4 li4] |
+| 意 | 意 | yi4 | idea/meaning/thought/to think/wish/desire/intention/to expect/to anticipate |
+| 這樣 | 这样 | zhe4 yang4 | this kind of/so/this way/like this/such |
+| 樣 | 样 | yang4 | manner/pattern/way/appearance/shape/classifier: kind, type |
+| 結 | 结 | jie1 | (of a plant) to produce (fruit or seeds)/Taiwan pr. [jie2] |
+| 結 | 结 | jie2 | knot/sturdy/bond/to tie/to bind/to check out (of a hotel) |
+| 結局 | 结局 | jie2 ju2 | conclusion/ending |
+| 局 | 局 | ju2 | office/situation/classifier for games: match, set, round etc |
+| 沒 | 没 | mei2 | (negative prefix for verbs)/have not/not |
+| 沒 | 没 | mo4 | drowned/to end/to die/to inundate |
+| 沒有 | 没有 | mei2 you3 | haven't/hasn't/doesn't exist/to not have/to not be |
+| 絲 | 丝 | si1 | silk/thread/trace/(cuisine) shreds or julienne strips/CL:條|条[tiao2]/classifier: a thread (of cloud, smoke etc), a bit, an iota, a hint (of sth) etc |
+| 埋 | 埋 | mai2 | to bury |
+| 埋 | 埋 | man2 | to blame |
+| 埋怨 | 埋怨 | man2 yuan4 | to complain/to grumble (about)/to reproach/to blame |
+| 怨 | 怨 | yuan4 | to blame/to complain |
+| 和 | 和 | He2 | surname He/Japanese (food, clothes etc) |
+| 和 | 和 | he2 | and/together with/with/sum/union/peace/harmony/Taiwan pr. [han4] when it means "and" or "with" |
+| 和 | 和 | he4 | to compose a poem in reply (to sb's poem) using the same rhyme sequence/to join in the singing/to chime in with others |
+| 和 | 和 | hu2 | to complete a set in mahjong or playing cards |
+| 和 | 和 | huo2 | to combine a powdery substance (flour, plaster etc) with water/Taiwan pr. [huo4] |
+| 和 | 和 | huo4 | to mix (ingredients) together/to blend/classifier for rinses of clothes/classifier for boilings of medicinal herbs |
+| 悔 | 悔 | hui3 | to regret |
+| 悔意 | 悔意 | hui3 yi4 | remorse |
+| 雖 | 虽 | sui1 | although/even though |
+| 雖然 | 虽然 | sui1 ran2 | although/even though/even if |
+| 然 | 然 | ran2 | correct/right/so/thus/like this/-ly |
+| 最 | 最 | zui4 | most/the most/-est (superlative suffix) |
+| 最初 | 最初 | zui4 chu1 | first/primary/initial/original/at first/initially/originally |
+| 初 | 初 | chu1 | at first/(at the) beginning/first/junior/basic |
+| 最終 | 最终 | zui4 zhong1 | final/ultimate |
+| 終 | 终 | zhong1 | end/finish |
+| 唯 | 唯 | wei2 | -ism/only/alone |
+| 唯 | 唯 | wei3 | yes |
+| 唯一 | 唯一 | wei2 yi1 | only/sole |
+| A | A | A | (slang) (Tw) to steal |
 
