Fix: traditional to dutch

--- a/_portfolio/林俊杰-你是我的唯一.md
+++ b/_portfolio/林俊杰-你是我的唯一.md
@@ -7,7 +7,7 @@ date: "6 may 2018"
 tags: [林俊杰, 你是我的唯一, JJ Lin, You are my one and only one]
 ---
 
-### [Simplified](#simplified) | [Traditional](#traditional)
+### [Simplified](#simplified) | [Traditioneel](#traditional)
 
 ```
 很想给你写封信
