Feat: Images added

--- a/_portfolio/001_林俊杰-你是我的唯一.md
+++ b/_portfolio/001_林俊杰-你是我的唯一.md
@@ -177,14 +177,14 @@ You are the only one ooo ~
 | 一 | 一 | yi1 | één/1/enkele/een (partikel)/zodra/alles/geheel/(Kangxi radicaal 1)/wordt ook wel als [yao1] uitgesproken voor duidelijkheid bij het spellen van nummers |
 | 場 | 场 | chang3 | grote plek/toneel/podium/scène (van een toneelstuk)/maatwoord voor sport activiteiten/maatwoord voor aantal examens |
 | 電 | 电 | dian4 | elektriciteit/elektrisch |
-| 電影 | 电影 | dian4 ying3 | film/MW:部[bu4],片[pian4],幕[mu4],場|场[chang3] |
+| 電影 | 电影 | dian4 ying3 | film/MW:部[bu4],片[pian4],幕[mu4],場(场)[chang3] |
 | 影 | 影 | ying3 | schaduw/reflectie/film/foto/plaatje |
 | 還 | 还 | hai2 | nog/nog steeds/iets dat nog steeds bezig is/nog meer/redelijk/ook |
 | 還有 | 还有 | hai2 you3 | bovendien/verder nog/ook |
 | 有 | 有 | you3 | hebben/er zijn/zijn |
 | 我 | 我 | wo3 | ik |
-| 心 | 心 | xin1 | hart/geest/intentie/centrum/kern/MW:顆|颗[ke1],個|个[ge4] |
-| 心情 | 心情 | xin1 qing2 | humeur/stemming/MW:個|个[ge4] |
+| 心 | 心 | xin1 | hart/geest/intentie/centrum/kern/MW:顆(颗)[ke1],個(个)[ge4] |
+| 心情 | 心情 | xin1 qing2 | humeur/stemming/MW:個(个)[ge4] |
 | 情 | 情 | qing2 | gevoel/emotie/passie/situatie |
 | 卻 | 却 | que4 | maar/hoewel/niettemin |
 | 只 | 只 | zhi3 | alleen/slechts |
@@ -194,7 +194,7 @@ You are the only one ooo ~
 | 而已 | 而已 | er2 yi3 | dat is alles/niets meer |
 | 已 | 已 | yi3 | nu al/stoppend/dan/daarna |
 | 已經 | 已经 | yi3 jing1 | nu al |
-| 經 | 经 | jing1 | klassiekers/heilig boek/script/er doorheen komen/ondergaan/verdragen/inslag (textiel)/longitude/menstruatie/afkorting voor economie 經濟|经济[jing1 ji4] |
+| 經 | 经 | jing1 | klassiekers/heilig boek/script/er doorheen komen/ondergaan/verdragen/inslag (textiel)/longitude/menstruatie/afkorting voor economie 經濟(经济)[jing1 ji4] |
 | 不 | 不 | bu4 | nee/niet |
 | 不能 | 不能 | bu4 neng2 | kan niet/moet niet/zou niet moeten |
 | 能 | 能 | neng2 | kunnen/in staan zijn om/mogelijk/vermogen/(fysiek) vermogen |
@@ -202,7 +202,7 @@ You are the only one ooo ~
 | 肯定 | 肯定 | ken3 ding4 | ergens zeker van zijn/definitief/zeker zijn/bevestigen |
 | 定 | 定 | ding4 | vastzetten/besluiten/bestellen |
 | 是不是 | 是不是 | shi4 bu4 shi4 | ja of nee/is het zo dat?/waar of niet waar |
-| 會 | 会 | hui4 | kunnen/mogelijk zijn/willend zijn/(grammaticaal woord om de toekomstige vorm aan te geven)/waarschijnlijk/ontmoeten/verzamelen/bijeenbrengen/groep/vereniging/MW:個|个[ge4] |
+| 會 | 会 | hui4 | kunnen/mogelijk zijn/willend zijn/(grammaticaal woord om de toekomstige vorm aan te geven)/waarschijnlijk/ontmoeten/verzamelen/bijeenbrengen/groep/vereniging/MW:個(个)[ge4] |
 | 關 | 关 | guan1 | (iets) betreffen/ergens over gaan/bergpas/sluiten/uitdoen |
 | 關心 | 关心 | guan1 xin1 | ergens zorgen over maken/ergen om geven |
 | 心愛 | 心爱 | xin1 ai4 | geliefde |
