Fix: _blank link in markdown

--- a/_portfolio/001_林俊杰-你是我的唯一.md
+++ b/_portfolio/001_林俊杰-你是我的唯一.md
@@ -9,7 +9,10 @@ tags: [林俊杰, 你是我的唯一, JJ Lin, You are my one and only one]
 
 ## JJ Lin
 
-Mijn favoriete Taiwanese zanger. Klik hier voor de [youtube clip](https://www.youtube.com/watch?v=5gtKlxBqxgI). 
+Klik hier voor de [youtube clip](https://www.youtube.com/watch?v=5gtKlxBqxgI){:target="_blank"}.
+
+Mijn favoriete zanger, geboren in Singapore. Hij zingt naast in het Mandarijn ook in het Hokkien, de taal van zijn moeder.
+JJ Lin is bekend vanwege de mooie teksten die hij schrijft. Hij heeft ook de songteksten geschreven van andere zangers, waaronder A-mei en Harlem Yu.
 Onderaan de pagina staat een Nederlandse woordenlijst om Chinees mee te leren. 
 Zowel traditioneel als simplified. 加油！
 
